[tool.poetry]
name = "price-tracker"
version = "0.1.0"
description = ""
authors = ["Artem Oluwo <oluwoartem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
fastapi = {extras = ["all"], version = "^0.111.0"}
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
